jolc-server/grammar/compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init
Rule 1     init -> scripts
Rule 2     init -> empty
Rule 3     empty -> <empty>
Rule 4     scripts -> scripts script
Rule 5     scripts -> script
Rule 6     script -> function SEMICOLON
Rule 7     script -> instruccion
Rule 8     function -> FUNCION ID PARIZQ PARDER instrucciones FIN
Rule 9     function -> FUNCION ID PARIZQ PARDER TIPOVAR TIPO instrucciones FIN
Rule 10    function -> FUNCION ID PARIZQ PARAMETROSTIPO PARDER instrucciones FIN
Rule 11    function -> FUNCION ID PARIZQ PARAMETROSTIPO PARDER TIPOVAR TIPO instrucciones FIN
Rule 12    PARAMETROS -> PARAMETROS COMMA PARAMETRO
Rule 13    PARAMETROS -> PARAMETRO
Rule 14    PARAMETRO -> expresion
Rule 15    PARAMETROSTIPO -> PARAMETROSTIPO COMMA PARAMETROTIPO
Rule 16    PARAMETROSTIPO -> PARAMETROTIPO
Rule 17    PARAMETROTIPO -> ID TIPOVAR TIPO
Rule 18    PARAMETROTIPO -> ID TIPOVAR ID
Rule 19    PARAMETROTIPO -> ID
Rule 20    instrucciones -> instrucciones instruccion
Rule 21    instrucciones -> instruccion
Rule 22    instruccion -> imprimir SEMICOLON
Rule 23    instruccion -> call SEMICOLON
Rule 24    instruccion -> STRUCTS SEMICOLON
Rule 25    instruccion -> IF SEMICOLON
Rule 26    instruccion -> FOR SEMICOLON
Rule 27    instruccion -> WHILE SEMICOLON
Rule 28    instruccion -> BREAK SEMICOLON
Rule 29    instruccion -> CONTINUE SEMICOLON
Rule 30    instruccion -> RETURN SEMICOLON
Rule 31    instruccion -> DECLARACION SEMICOLON
Rule 32    STRUCTS -> MUTABLE STRUCT ID ATIBUTOSSTRUCT FIN
Rule 33    STRUCTS -> MUTABLE STRUCT ID FIN
Rule 34    STRUCTS -> STRUCT ID ATIBUTOSSTRUCT FIN
Rule 35    STRUCTS -> STRUCT ID FIN
Rule 36    ATIBUTOSSTRUCT -> ATIBUTOSSTRUCT ATRIBUTOSTRUCT SEMICOLON
Rule 37    ATIBUTOSSTRUCT -> ATRIBUTOSTRUCT SEMICOLON
Rule 38    ATRIBUTOSTRUCT -> ID TIPOVAR TIPO
Rule 39    ATRIBUTOSTRUCT -> ID TIPOVAR ID
Rule 40    ATRIBUTOSTRUCT -> ID
Rule 41    STRUCTGETS -> STRUCTGETS DOT STRUCTGET
Rule 42    STRUCTGETS -> STRUCTGET
Rule 43    STRUCTGET -> ID
Rule 44    ARREGLO -> CORIZQ PARAMETROS CORDER
Rule 45    ARRAYGETS -> ARRAYGETS ARRAYGET
Rule 46    ARRAYGETS -> ARRAYGET
Rule 47    ARRAYGET -> CORIZQ expresion CORDER
Rule 48    ARRAYTYPE -> VECTOR LLAVEIZQ TIPO LLAVEDER
Rule 49    IF -> if expresion instrucciones FIN
Rule 50    IF -> if expresion instrucciones else instrucciones FIN
Rule 51    IF -> if expresion instrucciones LIST_ELSEIF
Rule 52    LIST_ELSEIF -> LIST_ELSEIF ELSEIF
Rule 53    LIST_ELSEIF -> ELSEIF
Rule 54    ELSEIF -> elseif expresion instrucciones FIN
Rule 55    ELSEIF -> elseif expresion instrucciones else instrucciones FIN
Rule 56    ELSEIF -> elseif expresion instrucciones LIST_ELSEIF
Rule 57    FOR -> for ID in expresion instrucciones FIN
Rule 58    FOR -> for ID in expresion FIN
Rule 59    RANGO -> expresion COLON expresion
Rule 60    WHILE -> while expresion instrucciones FIN
Rule 61    RETURN -> return expresion
Rule 62    BREAK -> break
Rule 63    CONTINUE -> continue
Rule 64    DECLARACION -> local ID
Rule 65    DECLARACION -> global ID
Rule 66    DECLARACION -> ID IGUAL expresion
Rule 67    DECLARACION -> global ID IGUAL expresion
Rule 68    DECLARACION -> local ID IGUAL expresion
Rule 69    DECLARACION -> ID IGUAL expresion TIPOVAR TIPO
Rule 70    DECLARACION -> global ID IGUAL expresion TIPOVAR TIPO
Rule 71    DECLARACION -> local ID IGUAL expresion TIPOVAR TIPO
Rule 72    DECLARACION -> STRUCTGETS IGUAL expresion
Rule 73    DECLARACION -> ID ARRAYGETS IGUAL expresion
Rule 74    imprimir -> PRINTLN PARIZQ PARAMETROS PARDER
Rule 75    imprimir -> PRINT PARIZQ PARAMETROS PARDER
Rule 76    expresion -> expresion MAS expresion
Rule 77    expresion -> expresion MENOS expresion
Rule 78    expresion -> expresion POR expresion
Rule 79    expresion -> expresion DIVIDIDO expresion
Rule 80    expresion -> expresion POTENCIA expresion
Rule 81    expresion -> expresion MODULO expresion
Rule 82    expresion -> expresion DOT expresion
Rule 83    expresion -> expresion IGUALIGUAL expresion
Rule 84    expresion -> expresion MAYORQ expresion
Rule 85    expresion -> expresion MENORQ expresion
Rule 86    expresion -> expresion MAYORIQ expresion
Rule 87    expresion -> expresion MENORIQ expresion
Rule 88    expresion -> expresion DIFERENTE expresion
Rule 89    expresion -> expresion AND expresion
Rule 90    expresion -> expresion OR expresion
Rule 91    expresion -> NOT expresion
Rule 92    expresion -> PARIZQ expresion PARDER
Rule 93    expresion -> MENOS expresion
Rule 94    call -> ID PARIZQ PARDER
Rule 95    call -> ID NOT PARIZQ PARDER
Rule 96    call -> ID PARIZQ PARAMETROS PARDER
Rule 97    call -> ID NOT PARIZQ PARAMETROS PARDER
Rule 98    excall -> ID PARIZQ PARDER
Rule 99    excall -> ID NOT PARIZQ PARDER
Rule 100   excall -> ID PARIZQ PARAMETROS PARDER
Rule 101   excall -> ID NOT PARIZQ PARAMETROS PARDER
Rule 102   expresion -> excall
Rule 103   expresion -> ENTERO
Rule 104   expresion -> DECIMAL
Rule 105   expresion -> CADENA
Rule 106   expresion -> CHARACTER
Rule 107   expresion -> ID
Rule 108   expresion -> TRUE
Rule 109   expresion -> FALSE
Rule 110   expresion -> NULO
Rule 111   expresion -> ID ARRAYGETS
Rule 112   expresion -> ARREGLO
Rule 113   expresion -> RANGO
Rule 114   expresion -> TIPO
Rule 115   TIPO -> INT64
Rule 116   TIPO -> FLOAT64
Rule 117   TIPO -> BOOL
Rule 118   TIPO -> CHAR
Rule 119   TIPO -> ID
Rule 120   TIPO -> STRING
Rule 121   TIPO -> ARRAYTYPE

Terminals, with rules where they appear

AND                  : 89
BOOL                 : 117
CADENA               : 105
CHAR                 : 118
CHARACTER            : 106
COLON                : 59
COMMA                : 12 15
CORDER               : 44 47
CORIZQ               : 44 47
DECIMAL              : 104
DIFERENTE            : 88
DIVIDIDO             : 79
DOT                  : 41 82
ENTERO               : 103
FALSE                : 109
FIN                  : 8 9 10 11 32 33 34 35 49 50 54 55 57 58 60
FLOAT64              : 116
FUNCION              : 8 9 10 11
ID                   : 8 9 10 11 17 18 18 19 32 33 34 35 38 39 39 40 43 57 58 64 65 66 67 68 69 70 71 73 94 95 96 97 98 99 100 101 107 111 119
IGUAL                : 66 67 68 69 70 71 72 73
IGUALIGUAL           : 83
INT64                : 115
LLAVEDER             : 48
LLAVEIZQ             : 48
MAS                  : 76
MAYORIQ              : 86
MAYORQ               : 84
MENORIQ              : 87
MENORQ               : 85
MENOS                : 77 93
MODULO               : 81
MUTABLE              : 32 33
NOT                  : 91 95 97 99 101
NULO                 : 110
OR                   : 90
PARDER               : 8 9 10 11 74 75 92 94 95 96 97 98 99 100 101
PARIZQ               : 8 9 10 11 74 75 92 94 95 96 97 98 99 100 101
POR                  : 78
POTENCIA             : 80
PRINT                : 75
PRINTLN              : 74
SEMICOLON            : 6 22 23 24 25 26 27 28 29 30 31 36 37
STRING               : 120
STRUCT               : 32 33 34 35
TIPOVAR              : 9 11 17 18 38 39 69 70 71
TRUE                 : 108
VECTOR               : 48
break                : 62
continue             : 63
else                 : 50 55
elseif               : 54 55 56
error                : 
for                  : 57 58
global               : 65 67 70
if                   : 49 50 51
in                   : 57 58
local                : 64 68 71
return               : 61
while                : 60

Nonterminals, with rules where they appear

ARRAYGET             : 45 46
ARRAYGETS            : 45 73 111
ARRAYTYPE            : 121
ARREGLO              : 112
ATIBUTOSSTRUCT       : 32 34 36
ATRIBUTOSTRUCT       : 36 37
BREAK                : 28
CONTINUE             : 29
DECLARACION          : 31
ELSEIF               : 52 53
FOR                  : 26
IF                   : 25
LIST_ELSEIF          : 51 52 56
PARAMETRO            : 12 13
PARAMETROS           : 12 44 74 75 96 97 100 101
PARAMETROSTIPO       : 10 11 15
PARAMETROTIPO        : 15 16
RANGO                : 113
RETURN               : 30
STRUCTGET            : 41 42
STRUCTGETS           : 41 72
STRUCTS              : 24
TIPO                 : 9 11 17 38 48 69 70 71 114
WHILE                : 27
call                 : 23
empty                : 2
excall               : 102
expresion            : 14 47 49 50 51 54 55 56 57 58 59 59 60 61 66 67 68 69 70 71 72 73 76 76 77 77 78 78 79 79 80 80 81 81 82 82 83 83 84 84 85 85 86 86 87 87 88 88 89 89 90 90 91 92 93
function             : 6
imprimir             : 22
init                 : 0
instruccion          : 7 20 21
instrucciones        : 8 9 10 11 20 49 50 50 51 54 55 55 56 57 60
script               : 4 5
scripts              : 1 4

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . scripts
    (2) init -> . empty
    (4) scripts -> . scripts script
    (5) scripts -> . script
    (3) empty -> .
    (6) script -> . function SEMICOLON
    (7) script -> . instruccion
    (8) function -> . FUNCION ID PARIZQ PARDER instrucciones FIN
    (9) function -> . FUNCION ID PARIZQ PARDER TIPOVAR TIPO instrucciones FIN
    (10) function -> . FUNCION ID PARIZQ PARAMETROSTIPO PARDER instrucciones FIN
    (11) function -> . FUNCION ID PARIZQ PARAMETROSTIPO PARDER TIPOVAR TIPO instrucciones FIN
    (22) instruccion -> . imprimir SEMICOLON
    (23) instruccion -> . call SEMICOLON
    (24) instruccion -> . STRUCTS SEMICOLON
    (25) instruccion -> . IF SEMICOLON
    (26) instruccion -> . FOR SEMICOLON
    (27) instruccion -> . WHILE SEMICOLON
    (28) instruccion -> . BREAK SEMICOLON
    (29) instruccion -> . CONTINUE SEMICOLON
    (30) instruccion -> . RETURN SEMICOLON
    (31) instruccion -> . DECLARACION SEMICOLON
    (74) imprimir -> . PRINTLN PARIZQ PARAMETROS PARDER
    (75) imprimir -> . PRINT PARIZQ PARAMETROS PARDER
    (94) call -> . ID PARIZQ PARDER
    (95) call -> . ID NOT PARIZQ PARDER
    (96) call -> . ID PARIZQ PARAMETROS PARDER
    (97) call -> . ID NOT PARIZQ PARAMETROS PARDER
    (32) STRUCTS -> . MUTABLE STRUCT ID ATIBUTOSSTRUCT FIN
    (33) STRUCTS -> . MUTABLE STRUCT ID FIN
    (34) STRUCTS -> . STRUCT ID ATIBUTOSSTRUCT FIN
    (35) STRUCTS -> . STRUCT ID FIN
    (49) IF -> . if expresion instrucciones FIN
    (50) IF -> . if expresion instrucciones else instrucciones FIN
    (51) IF -> . if expresion instrucciones LIST_ELSEIF
    (57) FOR -> . for ID in expresion instrucciones FIN
    (58) FOR -> . for ID in expresion FIN
    (60) WHILE -> . while expresion instrucciones FIN
    (62) BREAK -> . break
    (63) CONTINUE -> . continue
    (61) RETURN -> . return expresion
    (64) DECLARACION -> . local ID
    (65) DECLARACION -> . global ID
    (66) DECLARACION -> . ID IGUAL expresion
    (67) DECLARACION -> . global ID IGUAL expresion
    (68) DECLARACION -> . local ID IGUAL expresion
    (69) DECLARACION -> . ID IGUAL expresion TIPOVAR TIPO
    (70) DECLARACION -> . global ID IGUAL expresion TIPOVAR TIPO
    (71) DECLARACION -> . local ID IGUAL expresion TIPOVAR TIPO
    (72) DECLARACION -> . STRUCTGETS IGUAL expresion
    (73) DECLARACION -> . ID ARRAYGETS IGUAL expresion
    (41) STRUCTGETS -> . STRUCTGETS DOT STRUCTGET
    (42) STRUCTGETS -> . STRUCTGET
    (43) STRUCTGET -> . ID

    $end            reduce using rule 3 (empty -> .)
    FUNCION         shift and go to state 7
    PRINTLN         shift and go to state 19
    PRINT           shift and go to state 20
    ID              shift and go to state 8
    MUTABLE         shift and go to state 21
    STRUCT          shift and go to state 22
    if              shift and go to state 23
    for             shift and go to state 24
    while           shift and go to state 25
    break           shift and go to state 26
    continue        shift and go to state 27
    return          shift and go to state 28
    local           shift and go to state 29
    global          shift and go to state 30

    init                           shift and go to state 1
    scripts                        shift and go to state 2
    empty                          shift and go to state 3
    script                         shift and go to state 4
    function                       shift and go to state 5
    instruccion                    shift and go to state 6
    imprimir                       shift and go to state 9
    call                           shift and go to state 10
    STRUCTS                        shift and go to state 11
    IF                             shift and go to state 12
    FOR                            shift and go to state 13
    WHILE                          shift and go to state 14
    BREAK                          shift and go to state 15
    CONTINUE                       shift and go to state 16
    RETURN                         shift and go to state 17
    DECLARACION                    shift and go to state 18
    STRUCTGETS                     shift and go to state 31
    STRUCTGET                      shift and go to state 32

state 1

    (0) S' -> init .



state 2

    (1) init -> scripts .
    (4) scripts -> scripts . script
    (6) script -> . function SEMICOLON
    (7) script -> . instruccion
    (8) function -> . FUNCION ID PARIZQ PARDER instrucciones FIN
    (9) function -> . FUNCION ID PARIZQ PARDER TIPOVAR TIPO instrucciones FIN
    (10) function -> . FUNCION ID PARIZQ PARAMETROSTIPO PARDER instrucciones FIN
    (11) function -> . FUNCION ID PARIZQ PARAMETROSTIPO PARDER TIPOVAR TIPO instrucciones FIN
    (22) instruccion -> . imprimir SEMICOLON
    (23) instruccion -> . call SEMICOLON
    (24) instruccion -> . STRUCTS SEMICOLON
    (25) instruccion -> . IF SEMICOLON
    (26) instruccion -> . FOR SEMICOLON
    (27) instruccion -> . WHILE SEMICOLON
    (28) instruccion -> . BREAK SEMICOLON
    (29) instruccion -> . CONTINUE SEMICOLON
    (30) instruccion -> . RETURN SEMICOLON
    (31) instruccion -> . DECLARACION SEMICOLON
    (74) imprimir -> . PRINTLN PARIZQ PARAMETROS PARDER
    (75) imprimir -> . PRINT PARIZQ PARAMETROS PARDER
    (94) call -> . ID PARIZQ PARDER
    (95) call -> . ID NOT PARIZQ PARDER
    (96) call -> . ID PARIZQ PARAMETROS PARDER
    (97) call -> . ID NOT PARIZQ PARAMETROS PARDER
    (32) STRUCTS -> . MUTABLE STRUCT ID ATIBUTOSSTRUCT FIN
    (33) STRUCTS -> . MUTABLE STRUCT ID FIN
    (34) STRUCTS -> . STRUCT ID ATIBUTOSSTRUCT FIN
    (35) STRUCTS -> . STRUCT ID FIN
    (49) IF -> . if expresion instrucciones FIN
    (50) IF -> . if expresion instrucciones else instrucciones FIN
    (51) IF -> . if expresion instrucciones LIST_ELSEIF
    (57) FOR -> . for ID in expresion instrucciones FIN
    (58) FOR -> . for ID in expresion FIN
    (60) WHILE -> . while expresion instrucciones FIN
    (62) BREAK -> . break
    (63) CONTINUE -> . continue
    (61) RETURN -> . return expresion
    (64) DECLARACION -> . local ID
    (65) DECLARACION -> . global ID
    (66) DECLARACION -> . ID IGUAL expresion
    (67) DECLARACION -> . global ID IGUAL expresion
    (68) DECLARACION -> . local ID IGUAL expresion
    (69) DECLARACION -> . ID IGUAL expresion TIPOVAR TIPO
    (70) DECLARACION -> . global ID IGUAL expresion TIPOVAR TIPO
    (71) DECLARACION -> . local ID IGUAL expresion TIPOVAR TIPO
    (72) DECLARACION -> . STRUCTGETS IGUAL expresion
    (73) DECLARACION -> . ID ARRAYGETS IGUAL expresion
    (41) STRUCTGETS -> . STRUCTGETS DOT STRUCTGET
    (42) STRUCTGETS -> . STRUCTGET
    (43) STRUCTGET -> . ID

    $end            reduce using rule 1 (init -> scripts .)
    FUNCION         shift and go to state 7
    PRINTLN         shift and go to state 19
    PRINT           shift and go to state 20
    ID              shift and go to state 8
    MUTABLE         shift and go to state 21
    STRUCT          shift and go to state 22
    if              shift and go to state 23
    for             shift and go to state 24
    while           shift and go to state 25
    break           shift and go to state 26
    continue        shift and go to state 27
    return          shift and go to state 28
    local           shift and go to state 29
    global          shift and go to state 30

    script                         shift and go to state 33
    function                       shift and go to state 5
    instruccion                    shift and go to state 6
    imprimir                       shift and go to state 9
    call                           shift and go to state 10
    STRUCTS                        shift and go to state 11
    IF                             shift and go to state 12
    FOR                            shift and go to state 13
    WHILE                          shift and go to state 14
    BREAK                          shift and go to state 15
    CONTINUE                       shift and go to state 16
    RETURN                         shift and go to state 17
    DECLARACION                    shift and go to state 18
    STRUCTGETS                     shift and go to state 31
    STRUCTGET                      shift and go to state 32

state 3

    (2) init -> empty .

    $end            reduce using rule 2 (init -> empty .)


state 4

    (5) scripts -> script .

    FUNCION         reduce using rule 5 (scripts -> script .)
    PRINTLN         reduce using rule 5 (scripts -> script .)
    PRINT           reduce using rule 5 (scripts -> script .)
    ID              reduce using rule 5 (scripts -> script .)
    MUTABLE         reduce using rule 5 (scripts -> script .)
    STRUCT          reduce using rule 5 (scripts -> script .)
    if              reduce using rule 5 (scripts -> script .)
    for             reduce using rule 5 (scripts -> script .)
    while           reduce using rule 5 (scripts -> script .)
    break           reduce using rule 5 (scripts -> script .)
    continue        reduce using rule 5 (scripts -> script .)
    return          reduce using rule 5 (scripts -> script .)
    local           reduce using rule 5 (scripts -> script .)
    global          reduce using rule 5 (scripts -> script .)
    $end            reduce using rule 5 (scripts -> script .)


state 5

    (6) script -> function . SEMICOLON

    SEMICOLON       shift and go to state 34


state 6

    (7) script -> instruccion .

    FUNCION         reduce using rule 7 (script -> instruccion .)
    PRINTLN         reduce using rule 7 (script -> instruccion .)
    PRINT           reduce using rule 7 (script -> instruccion .)
    ID              reduce using rule 7 (script -> instruccion .)
    MUTABLE         reduce using rule 7 (script -> instruccion .)
    STRUCT          reduce using rule 7 (script -> instruccion .)
    if              reduce using rule 7 (script -> instruccion .)
    for             reduce using rule 7 (script -> instruccion .)
    while           reduce using rule 7 (script -> instruccion .)
    break           reduce using rule 7 (script -> instruccion .)
    continue        reduce using rule 7 (script -> instruccion .)
    return          reduce using rule 7 (script -> instruccion .)
    local           reduce using rule 7 (script -> instruccion .)
    global          reduce using rule 7 (script -> instruccion .)
    $end            reduce using rule 7 (script -> instruccion .)


state 7

    (8) function -> FUNCION . ID PARIZQ PARDER instrucciones FIN
    (9) function -> FUNCION . ID PARIZQ PARDER TIPOVAR TIPO instrucciones FIN
    (10) function -> FUNCION . ID PARIZQ PARAMETROSTIPO PARDER instrucciones FIN
    (11) function -> FUNCION . ID PARIZQ PARAMETROSTIPO PARDER TIPOVAR TIPO instrucciones FIN

    ID              shift and go to state 35


state 8

    (94) call -> ID . PARIZQ PARDER
    (95) call -> ID . NOT PARIZQ PARDER
    (96) call -> ID . PARIZQ PARAMETROS PARDER
    (97) call -> ID . NOT PARIZQ PARAMETROS PARDER
    (66) DECLARACION -> ID . IGUAL expresion
    (69) DECLARACION -> ID . IGUAL expresion TIPOVAR TIPO
    (73) DECLARACION -> ID . ARRAYGETS IGUAL expresion
    (43) STRUCTGET -> ID .
    (45) ARRAYGETS -> . ARRAYGETS ARRAYGET
    (46) ARRAYGETS -> . ARRAYGET
    (47) ARRAYGET -> . CORIZQ expresion CORDER

  ! shift/reduce conflict for IGUAL resolved as shift
    PARIZQ          shift and go to state 36
    NOT             shift and go to state 37
    IGUAL           shift and go to state 38
    DOT             reduce using rule 43 (STRUCTGET -> ID .)
    CORIZQ          shift and go to state 41

  ! IGUAL           [ reduce using rule 43 (STRUCTGET -> ID .) ]

    ARRAYGETS                      shift and go to state 39
    ARRAYGET                       shift and go to state 40

state 9

    (22) instruccion -> imprimir . SEMICOLON

    SEMICOLON       shift and go to state 42


state 10

    (23) instruccion -> call . SEMICOLON

    SEMICOLON       shift and go to state 43


state 11

    (24) instruccion -> STRUCTS . SEMICOLON

    SEMICOLON       shift and go to state 44


state 12

    (25) instruccion -> IF . SEMICOLON

    SEMICOLON       shift and go to state 45


state 13

    (26) instruccion -> FOR . SEMICOLON

    SEMICOLON       shift and go to state 46


state 14

    (27) instruccion -> WHILE . SEMICOLON

    SEMICOLON       shift and go to state 47


state 15

    (28) instruccion -> BREAK . SEMICOLON

    SEMICOLON       shift and go to state 48


state 16

    (29) instruccion -> CONTINUE . SEMICOLON

    SEMICOLON       shift and go to state 49


state 17

    (30) instruccion -> RETURN . SEMICOLON

    SEMICOLON       shift and go to state 50


state 18

    (31) instruccion -> DECLARACION . SEMICOLON

    SEMICOLON       shift and go to state 51


state 19

    (74) imprimir -> PRINTLN . PARIZQ PARAMETROS PARDER

    PARIZQ          shift and go to state 52


state 20

    (75) imprimir -> PRINT . PARIZQ PARAMETROS PARDER

    PARIZQ          shift and go to state 53


state 21

    (32) STRUCTS -> MUTABLE . STRUCT ID ATIBUTOSSTRUCT FIN
    (33) STRUCTS -> MUTABLE . STRUCT ID FIN

    STRUCT          shift and go to state 54


state 22

    (34) STRUCTS -> STRUCT . ID ATIBUTOSSTRUCT FIN
    (35) STRUCTS -> STRUCT . ID FIN

    ID              shift and go to state 55


state 23

    (49) IF -> if . expresion instrucciones FIN
    (50) IF -> if . expresion instrucciones else instrucciones FIN
    (51) IF -> if . expresion instrucciones LIST_ELSEIF
    (76) expresion -> . expresion MAS expresion
    (77) expresion -> . expresion MENOS expresion
    (78) expresion -> . expresion POR expresion
    (79) expresion -> . expresion DIVIDIDO expresion
    (80) expresion -> . expresion POTENCIA expresion
    (81) expresion -> . expresion MODULO expresion
    (82) expresion -> . expresion DOT expresion
    (83) expresion -> . expresion IGUALIGUAL expresion
    (84) expresion -> . expresion MAYORQ expresion
    (85) expresion -> . expresion MENORQ expresion
    (86) expresion -> . expresion MAYORIQ expresion
    (87) expresion -> . expresion MENORIQ expresion
    (88) expresion -> . expresion DIFERENTE expresion
    (89) expresion -> . expresion AND expresion
    (90) expresion -> . expresion OR expresion
    (91) expresion -> . NOT expresion
    (92) expresion -> . PARIZQ expresion PARDER
    (93) expresion -> . MENOS expresion
    (102) expresion -> . excall
    (103) expresion -> . ENTERO
    (104) expresion -> . DECIMAL
    (105) expresion -> . CADENA
    (106) expresion -> . CHARACTER
    (107) expresion -> . ID
    (108) expresion -> . TRUE
    (109) expresion -> . FALSE
    (110) expresion -> . NULO
    (111) expresion -> . ID ARRAYGETS
    (112) expresion -> . ARREGLO
    (113) expresion -> . RANGO
    (114) expresion -> . TIPO
    (98) excall -> . ID PARIZQ PARDER
    (99) excall -> . ID NOT PARIZQ PARDER
    (100) excall -> . ID PARIZQ PARAMETROS PARDER
    (101) excall -> . ID NOT PARIZQ PARAMETROS PARDER
    (44) ARREGLO -> . CORIZQ PARAMETROS CORDER
    (59) RANGO -> . expresion COLON expresion
    (115) TIPO -> . INT64
    (116) TIPO -> . FLOAT64
    (117) TIPO -> . BOOL
    (118) TIPO -> . CHAR
    (119) TIPO -> . ID
    (120) TIPO -> . STRING
    (121) TIPO -> . ARRAYTYPE
    (48) ARRAYTYPE -> . VECTOR LLAVEIZQ TIPO LLAVEDER

    NOT             shift and go to state 58
    PARIZQ          shift and go to state 59
    MENOS           shift and go to state 57
    ENTERO          shift and go to state 61
    DECIMAL         shift and go to state 62
    CADENA          shift and go to state 63
    CHARACTER       shift and go to state 64
    ID              shift and go to state 65
    TRUE            shift and go to state 66
    FALSE           shift and go to state 67
    NULO            shift and go to state 68
    CORIZQ          shift and go to state 72
    INT64           shift and go to state 73
    FLOAT64         shift and go to state 74
    BOOL            shift and go to state 75
    CHAR            shift and go to state 76
    STRING          shift and go to state 77
    VECTOR          shift and go to state 79

    expresion                      shift and go to state 56
    excall                         shift and go to state 60
    ARREGLO                        shift and go to state 69
    RANGO                          shift and go to state 70
    TIPO                           shift and go to state 71
    ARRAYTYPE                      shift and go to state 78

state 24

    (57) FOR -> for . ID in expresion instrucciones FIN
    (58) FOR -> for . ID in expresion FIN

    ID              shift and go to state 80


state 25

    (60) WHILE -> while . expresion instrucciones FIN
    (76) expresion -> . expresion MAS expresion
    (77) expresion -> . expresion MENOS expresion
    (78) expresion -> . expresion POR expresion
    (79) expresion -> . expresion DIVIDIDO expresion
    (80) expresion -> . expresion POTENCIA expresion
    (81) expresion -> . expresion MODULO expresion
    (82) expresion -> . expresion DOT expresion
    (83) expresion -> . expresion IGUALIGUAL expresion
    (84) expresion -> . expresion MAYORQ expresion
    (85) expresion -> . expresion MENORQ expresion
    (86) expresion -> . expresion MAYORIQ expresion
    (87) expresion -> . expresion MENORIQ expresion
    (88) expresion -> . expresion DIFERENTE expresion
    (89) expresion -> . expresion AND expresion
    (90) expresion -> . expresion OR expresion
    (91) expresion -> . NOT expresion
    (92) expresion -> . PARIZQ expresion PARDER
    (93) expresion -> . MENOS expresion
    (102) expresion -> . excall
    (103) expresion -> . ENTERO
    (104) expresion -> . DECIMAL
    (105) expresion -> . CADENA
    (106) expresion -> . CHARACTER
    (107) expresion -> . ID
    (108) expresion -> . TRUE
    (109) expresion -> . FALSE
    (110) expresion -> . NULO
    (111) expresion -> . ID ARRAYGETS
    (112) expresion -> . ARREGLO
    (113) expresion -> . RANGO
    (114) expresion -> . TIPO
    (98) excall -> . ID PARIZQ PARDER
    (99) excall -> . ID NOT PARIZQ PARDER
    (100) excall -> . ID PARIZQ PARAMETROS PARDER
    (101) excall -> . ID NOT PARIZQ PARAMETROS PARDER
    (44) ARREGLO -> . CORIZQ PARAMETROS CORDER
    (59) RANGO -> . expresion COLON expresion
    (115) TIPO -> . INT64
    (116) TIPO -> . FLOAT64
    (117) TIPO -> . BOOL
    (118) TIPO -> . CHAR
    (119) TIPO -> . ID
    (120) TIPO -> . STRING
    (121) TIPO -> . ARRAYTYPE
    (48) ARRAYTYPE -> . VECTOR LLAVEIZQ TIPO LLAVEDER

    NOT             shift and go to state 58
    PARIZQ          shift and go to state 59
    MENOS           shift and go to state 57
    ENTERO          shift and go to state 61
    DECIMAL         shift and go to state 62
    CADENA          shift and go to state 63
    CHARACTER       shift and go to state 64
    ID              shift and go to state 65
    TRUE            shift and go to state 66
    FALSE           shift and go to state 67
    NULO            shift and go to state 68
    CORIZQ          shift and go to state 72
    INT64           shift and go to state 73
    FLOAT64         shift and go to state 74
    BOOL            shift and go to state 75
    CHAR            shift and go to state 76
    STRING          shift and go to state 77
    VECTOR          shift and go to state 79

    expresion                      shift and go to state 81
    excall                         shift and go to state 60
    ARREGLO                        shift and go to state 69
    RANGO                          shift and go to state 70
    TIPO                           shift and go to state 71
    ARRAYTYPE                      shift and go to state 78

state 26

    (62) BREAK -> break .

    SEMICOLON       reduce using rule 62 (BREAK -> break .)


state 27

    (63) CONTINUE -> continue .

    SEMICOLON       reduce using rule 63 (CONTINUE -> continue .)


state 28

    (61) RETURN -> return . expresion
    (76) expresion -> . expresion MAS expresion
    (77) expresion -> . expresion MENOS expresion
    (78) expresion -> . expresion POR expresion
    (79) expresion -> . expresion DIVIDIDO expresion
    (80) expresion -> . expresion POTENCIA expresion
    (81) expresion -> . expresion MODULO expresion
    (82) expresion -> . expresion DOT expresion
    (83) expresion -> . expresion IGUALIGUAL expresion
    (84) expresion -> . expresion MAYORQ expresion
    (85) expresion -> . expresion MENORQ expresion
    (86) expresion -> . expresion MAYORIQ expresion
    (87) expresion -> . expresion MENORIQ expresion
    (88) expresion -> . expresion DIFERENTE expresion
    (89) expresion -> . expresion AND expresion
    (90) expresion -> . expresion OR expresion
    (91) expresion -> . NOT expresion
    (92) expresion -> . PARIZQ expresion PARDER
    (93) expresion -> . MENOS expresion
    (102) expresion -> . excall
    (103) expresion -> . ENTERO
    (104) expresion -> . DECIMAL
    (105) expresion -> . CADENA
    (106) expresion -> . CHARACTER
    (107) expresion -> . ID
    (108) expresion -> . TRUE
    (109) expresion -> . FALSE
    (110) expresion -> . NULO
    (111) expresion -> . ID ARRAYGETS
    (112) expresion -> . ARREGLO
    (113) expresion -> . RANGO
    (114) expresion -> . TIPO
    (98) excall -> . ID PARIZQ PARDER
    (99) excall -> . ID NOT PARIZQ PARDER
    (100) excall -> . ID PARIZQ PARAMETROS PARDER
    (101) excall -> . ID NOT PARIZQ PARAMETROS PARDER
    (44) ARREGLO -> . CORIZQ PARAMETROS CORDER
    (59) RANGO -> . expresion COLON expresion
    (115) TIPO -> . INT64
    (116) TIPO -> . FLOAT64
    (117) TIPO -> . BOOL
    (118) TIPO -> . CHAR
    (119) TIPO -> . ID
    (120) TIPO -> . STRING
    (121) TIPO -> . ARRAYTYPE
    (48) ARRAYTYPE -> . VECTOR LLAVEIZQ TIPO LLAVEDER

    NOT             shift and go to state 58
    PARIZQ          shift and go to state 59
    MENOS           shift and go to state 57
    ENTERO          shift and go to state 61
    DECIMAL         shift and go to state 62
    CADENA          shift and go to state 63
    CHARACTER       shift and go to state 64
    ID              shift and go to state 65
    TRUE            shift and go to state 66
    FALSE           shift and go to state 67
    NULO            shift and go to state 68
    CORIZQ          shift and go to state 72
    INT64           shift and go to state 73
    FLOAT64         shift and go to state 74
    BOOL            shift and go to state 75
    CHAR            shift and go to state 76
    STRING          shift and go to state 77
    VECTOR          shift and go to state 79

    expresion                      shift and go to state 82
    excall                         shift and go to state 60
    ARREGLO                        shift and go to state 69
    RANGO                          shift and go to state 70
    TIPO                           shift and go to state 71
    ARRAYTYPE                      shift and go to state 78

state 29

    (64) DECLARACION -> local . ID
    (68) DECLARACION -> local . ID IGUAL expresion
    (71) DECLARACION -> local . ID IGUAL expresion TIPOVAR TIPO

    ID              shift and go to state 83


state 30

    (65) DECLARACION -> global . ID
    (67) DECLARACION -> global . ID IGUAL expresion
    (70) DECLARACION -> global . ID IGUAL expresion TIPOVAR TIPO
